<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_gray"
    android:orientation="vertical"
    tools:context="com.ragentek.service.payservice.MyCashierActivity">

    <android.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/rgk_title_layout_background"
        android:maxButtonHeight="@dimen/rgk_action_bar_height"
        android:minHeight="@dimen/rgk_action_bar_height">

        <TextView
            android:id="@+id/toolbar_title"
            style="@style/RGK.TextAppearance.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:singleLine="true" />
    </android.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/goods_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="@color/white"
        android:padding="10dp">

        <TextView
            android:id="@+id/order_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:padding="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/goods_number"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/order_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:padding="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/goods_discount"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/order_discount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/choose_payment" />

    <LinearLayout
        android:id="@+id/alipay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/pay_btn_select"
        android:clickable="true"
        android:padding="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:src="@drawable/alipaylogo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="6"
            android:clickable="false"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ali"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alilabel"
                android:textSize="12dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/alicheckbox"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:src="@drawable/pay_selection_checkbox" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/wxpay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@drawable/pay_btn_select"
        android:clickable="true"
        android:padding="10dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:clickable="false"
            android:src="@drawable/wxpaylogo" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_weight="6"
            android:clickable="false"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wxtext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wx"
                android:textColor="@color/black"
                android:textSize="18dp" />

            <TextView
                android:id="@+id/wxtextlabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wxlabel"
                android:textSize="12dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/wxcheckbox"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:clickable="false"
            android:src="@drawable/pay_selection_checkbox2" />
    </LinearLayout>

    <Button
        android:id="@+id/pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:text="@string/pay" />

</LinearLayout>
